# Patmol

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  basis.c  basis.h  center.c  center.h  config.h  config.h.in  config.status  configure  configure.ac  dpmints.c  dpmints.h  dpmints2.c  erifs.c  erifs.h  md.h  mdd.c  mdr.c  momints.c  momints.h  oneints.c  oneints.h  patmol.c  patmpi.c  pconfig.h  rhfscf.c  rhfscf.h  rhfscf_mpi.c  rhfscf_mpi.h  rys.c  rys.h  scfaux.c  scfaux.h  shell.c  shell.h  spack_math.c  (+10 more)
autom4te.cache/: output.1  requests  traces.0  traces.1
m4/: ax_prog_cc_mpi.m4
